--- a/2018/2018-09/2018-09-04/source/320x50.css
+++ b/2018/2018-09/2018-09-04/source/320x50.css
@@ -869,16 +869,12 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.image {
-  background: url('./images/320x50_image.jpg');
-  width: 296px;
-  height: 79px;
-  top: -26px;
-  left: -7px;
-
-  -webkit-animation: slideInRight 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: slideInRight 0.75s ease-in-out 0.5s forwards;
-  animation: slideInRight 0.75s ease-in-out 0.5s forwards;
+.image1 {
+  background: url('./images/320x50_image1.jpg');
+  
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 
 .logo1 {
@@ -887,46 +883,37 @@
   -moz-animation: slideInDown 0.75s ease-in-out 1.25s forwards;
   animation: slideInDown 0.75s ease-in-out 1.25s forwards;
 }
-.footer {
-  background: url('./images/320x50_footer.png');
+.logo2 {
+  background: url('./images/320x50_logo2.png');
+
   -webkit-animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
   -moz-animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
   animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
 }
-.logo2 {
-  background: url('./images/320x50_logo2.png');
-
-  -webkit-animation: fadeInLeft100 0.75s ease-in-out 2.75s forwards;
-  -moz-animation: fadeInLeft100 0.75s ease-in-out 2.75s forwards;
-  animation: fadeInLeft100 0.75s ease-in-out 2.75s forwards;
-}
 
 .logo-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 4.75s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 4.75s forwards;
-  animation: fadeOut 0.75s ease-in-out 4.75s forwards;
+  -webkit-animation: fadeOut 0.75s ease-in-out 4s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 4s forwards;
+  animation: fadeOut 0.75s ease-in-out 4s forwards;
 }
 
-.image-container {
-  -webkit-animation: slideImageRightDown 0.75s ease-in-out 5s forwards;
-  -moz-animation: slideImageRightDown 0.75s ease-in-out 5s forwards;
-  animation: slideImageRightDown 0.75s ease-in-out 5s forwards;
-}
-.mask {
-  background: url('./images/320x50_mask.png');
-  top: -4px;
-  left: -120px;
+.image2 {
+  background: url('./images/320x50_image2.jpg');
+  
+  -webkit-animation: fadeIn 0.75s ease-in-out 4.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 4.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 4.5s forwards;
 }
 
 .text {
   background: url('./images/320x50_text.png');
-  -webkit-animation: fadeInUp100 0.75s ease-in-out 5.75s forwards;
-  -moz-animation: fadeInUp100 0.75s ease-in-out 5.75s forwards;
-  animation: fadeInUp100 0.75s ease-in-out 5.75s forwards;
+  -webkit-animation: fadeInUp100 0.75s ease-in-out 5.25s forwards;
+  -moz-animation: fadeInUp100 0.75s ease-in-out 5.25s forwards;
+  animation: fadeInUp100 0.75s ease-in-out 5.25s forwards;
 }
 .cta {
   background: url('./images/320x50_cta.png');
-  -webkit-animation: fadeInUp100 0.75s ease-in-out 6s forwards;
-  -moz-animation: fadeInUp100 0.75s ease-in-out 6s forwards;
-  animation: fadeInUp100 0.75s ease-in-out 6s forwards;
+  -webkit-animation: fadeInUp100 0.75s ease-in-out 5.5s forwards;
+  -moz-animation: fadeInUp100 0.75s ease-in-out  5.5s forwards;
+  animation: fadeInUp100 0.75s ease-in-out  5.5s forwards;
 }
