--- a/2018/2018-09/2018-09-04/source/970x250.css
+++ b/2018/2018-09/2018-09-04/source/970x250.css
@@ -864,10 +864,31 @@
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .bg {
-  background: url('./images/970x250_bg.jpg');
-  -webkit-animation: slideInDown 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: slideInDown 0.75s ease-in-out 0.5s forwards;
-  animation: slideInDown 0.75s ease-in-out 0.5s forwards;
+  background: #fff;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+
+.image {
+  background: url('./images/970x250_image.jpg');
+  width: 473px;
+  height: 250px;
+  top: 0px;
+  left: 0px;
+  -webkit-animation: fadeIn 0.75s linear 0.75s forwards;
+  -moz-animation: fadeIn 0.75s linear 0.75s forwards;
+  animation: fadeIn 0.75s linear 0.75s forwards;
+}
+.footer {
+  background: url('./images/970x250_footer.png');
+  width: 497px;
+  height: 250px;
+  right: 0px;
+  bottom: 0px;
+  -webkit-animation: zoomOut 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: zoomOut 0.75s ease-in-out 0.75s forwards;
+  animation: zoomOut 0.75s ease-in-out 0.75s forwards;
 }
 
 .logo1 {
@@ -876,19 +897,9 @@
   height: 66px;
   top: 59px;
   left: 45px;
-  -webkit-animation: slideInTopLogo 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: slideInTopLogo 0.75s ease-in-out 1.25s forwards;
-  animation: slideInTopLogo 0.75s ease-in-out 1.25s forwards;
-}
-.footer {
-  background: url('./images/970x250_footer.png');
-  width: 497px;
-  height: 250px;
-  right: 0px;
-  bottom: 0px;
-  -webkit-animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
-  -moz-animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
-  animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
+  -webkit-animation: slideInTopLogo 0.75s ease-in-out 1.5s forwards;
+  -moz-animation: slideInTopLogo 0.75s ease-in-out 1.5s forwards;
+  animation: slideInTopLogo 0.75s ease-in-out 1.5s forwards;
 }
 
 .text {
@@ -897,9 +908,9 @@
   height: 60px;
   top: 64px;
   left: 510px;
-  -webkit-animation: fadeInUp100 0.75s ease-in-out 2.75s forwards;
-  -moz-animation: fadeInUp100 0.75s ease-in-out 2.75s forwards;
-  animation: fadeInUp100 0.75s ease-in-out 2.75s forwards;
+  -webkit-animation: fadeInUp100 0.75s ease-in-out 2.5s forwards;
+  -moz-animation: fadeInUp100 0.75s ease-in-out 2.5s forwards;
+  animation: fadeInUp100 0.75s ease-in-out 2.5s forwards;
 }
 .logo2 {
   background: url('./images/970x250_logo2.png');
@@ -908,9 +919,9 @@
   top: 159px;
   right: 358px;
 
-  -webkit-animation: fadeInUp100 0.75s ease-in-out 3s forwards;
-  -moz-animation: fadeInUp100 0.75s ease-in-out 3s forwards;
-  animation: fadeInUp100 0.75s ease-in-out 3s forwards;
+  -webkit-animation: fadeInUp100 0.75s ease-in-out 2.75s forwards;
+  -moz-animation: fadeInUp100 0.75s ease-in-out 2.75s forwards;
+  animation: fadeInUp100 0.75s ease-in-out 2.75s forwards;
 }
 .cta {
   background: url('./images/970x250_cta.png');
@@ -918,7 +929,7 @@
   height: 38px;
   right: 43px;
   bottom: 38px;
-  -webkit-animation: fadeInUp100 0.75s ease-in-out 3.25s forwards;
-  -moz-animation: fadeInUp100 0.75s ease-in-out 3.25s forwards;
-  animation: fadeInUp100 0.75s ease-in-out 3.25s forwards;
+  -webkit-animation: fadeInUp100 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInUp100 0.75s ease-in-out 3s forwards;
+  animation: fadeInUp100 0.75s ease-in-out 3s forwards;
 }
