--- a/2018/2018-11/2018-11-07/source/jean/160x600.css
+++ b/2018/2018-11/2018-11-07/source/jean/160x600.css
@@ -863,9 +863,23 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
+.logo {
+  background: url('./images/160x600_logo.png');
+  -webkit-animation: fadeIn 0.75s ease-in-out 1s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 1s forwards;
+  animation: fadeIn 0.75s ease-in-out 1s forwards;
+}
+
 .text {
   background: url('./images/160x600_text.png');
-  -webkit-animation: slideInRight 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: slideInRight 0.75s ease-in-out 1.25s forwards;
-  animation: slideInRight 0.75s ease-in-out 1.25s forwards;
+  -webkit-animation: slideInRight 0.75s ease-in-out 1.5s forwards;
+  -moz-animation: slideInRight 0.75s ease-in-out 1.5s forwards;
+  animation: slideInRight 0.75s ease-in-out 1.5s forwards;
+}
+
+.cta {
+  background: url('./images/160x600_cta.png');
+  -webkit-animation: fadeIn 0.75s ease-in-out 2.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 2.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 2.25s forwards;
 }
