--- a/2018/2018-11/2018-11-07/source/jean/300x250.css
+++ b/2018/2018-11/2018-11-07/source/jean/300x250.css
@@ -864,9 +864,23 @@
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 
+.logo {
+  background: url('./images/300x250_logo.png');
+  -webkit-animation: fadeIn 0.75s ease-in-out 1s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 1s forwards;
+  animation: fadeIn 0.75s ease-in-out 1s forwards;
+}
+
 .text {
   background: url('./images/300x250_text.png');
-  -webkit-animation: slideInRight 1s ease-in-out 1s forwards;
-  -moz-animation: slideInRight 1s ease-in-out 1s forwards;
-  animation: slideInRight 1s ease-in-out 1s forwards;
+  -webkit-animation: slideInRight 1s ease-in-out 1.25s forwards;
+  -moz-animation: slideInRight 1s ease-in-out 1.25s forwards;
+  animation: slideInRight 1s ease-in-out 1.25s forwards;
+}
+
+.cta {
+  background: url('./images/300x250_cta.png');
+  -webkit-animation: fadeIn 0.75s ease-in-out 2.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 2.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 2.25s forwards;
 }
