--- a/2018/2018-11/2018-11-09/source/160x600.css
+++ b/2018/2018-11/2018-11-09/source/160x600.css
@@ -808,6 +808,7 @@
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+  backface-visibility: hidden;
 }
 
 .absolute {
