--- a/2018/2018-11/2018-11-30_2/source/970x250.css
+++ b/2018/2018-11/2018-11-30_2/source/970x250.css
@@ -880,14 +880,14 @@
   animation: fadeInDown 0.75s ease-in-out 1s forwards;
 }
 .text1-container {
-  -webkit-animation: slideOutDown 0.75s ease-in-out 4s forwards;
-  -moz-animation: slideOutDown 0.75s ease-in-out 4s forwards;
-  animation: slideOutDown 0.75s ease-in-out 4s forwards;
+  -webkit-animation: fadeOut 0.75s ease-in-out 4s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 4s forwards;
+  animation: fadeOut 0.75s ease-in-out 4s forwards;
 }
 .text2 {
   background: url('./images/970x250_text2.png') no-repeat center center;
 
-  -webkit-animation: slideInDown 0.75s ease-in-out 4s forwards;
-  -moz-animation: slideInDown 0.75s ease-in-out 4s forwards;
-  animation: slideInDown 0.75s ease-in-out 4s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
+  animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
 }
