--- a/2018/2018-12/2018-12-07/source/300x250_m.css
+++ b/2018/2018-12/2018-12-07/source/300x250_m.css
@@ -852,14 +852,6 @@
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 
-.cta {
-  background: url('./images/300x250_m_cta.png');
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-}
-
 .image2 {
   background: url('./images/300x250_m_image2.jpg');
   width: 300px;
@@ -882,4 +874,12 @@
   -webkit-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
   animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+}
+
+.cta {
+  background: url('./images/300x250_m_cta.png');
+
+  -webkit-animation: fadeInUp 0.75s ease-in-out 6.25s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 6.25s forwards;
+  animation: fadeInUp 0.75s ease-in-out 6.25s forwards;
 }
