--- a/2018/2018-12/2018-12-21/source/300x250.css
+++ b/2018/2018-12/2018-12-21/source/300x250.css
@@ -842,34 +842,34 @@
   animation: fadeInDown 0.75s ease-in-out 1s forwards;
 }
 .text1-container {
-  -webkit-animation: slideOutLeft 0.75s ease-in-out 3.75s forwards;
-  -moz-animation: slideOutLeft 0.75s ease-in-out 3.75s forwards;
-  animation: slideOutLeft 0.75s ease-in-out 3.75s forwards;
+  -webkit-animation: fadeOut 0.75s ease-in-out 3.75s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3.75s forwards;
+  animation: fadeOut 0.75s ease-in-out 3.75s forwards;
 }
 .text2 {
   background: url('./images/300x250_text2.png') no-repeat center center;
 
-  -webkit-animation: slideInLeft 0.75s ease-in-out 3.75s forwards;
-  -moz-animation: slideInLeft 0.75s ease-in-out 3.75s forwards;
-  animation: slideInLeft 0.75s ease-in-out 3.75s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 4s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 4s forwards;
+  animation: fadeInDown 0.75s ease-in-out 4s forwards;
 }
 .text2_2 {
   background: url('./images/300x250_text2_2.png') no-repeat center center;
 
-  -webkit-animation: slideInLeft 0.75s ease-in-out 3.75s forwards;
-  -moz-animation: slideInLeft 0.75s ease-in-out 3.75s forwards;
-  animation: slideInLeft 0.75s ease-in-out 3.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 4s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 4s forwards;
+  animation: fadeIn 0.75s ease-in-out 4s forwards;
 }
 
 .text2-container {
-  -webkit-animation: slideOutLeft 0.75s ease-in-out 6.5s forwards;
-  -moz-animation: slideOutLeft 0.75s ease-in-out 6.5s forwards;
-  animation: slideOutLeft 0.75s ease-in-out 6.5s forwards;
+  -webkit-animation: fadeOut 0.75s ease-in-out 6.75s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 6.75s forwards;
+  animation: fadeOut 0.75s ease-in-out 6.75s forwards;
 }
 .text3 {
   background: url('./images/300x250_text3.png') no-repeat center center;
 
-  -webkit-animation: slideInLeft 0.75s ease-in-out 6.5s forwards;
-  -moz-animation: slideInLeft 0.75s ease-in-out 6.5s forwards;
-  animation: slideInLeft 0.75s ease-in-out 6.5s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 7s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 7s forwards;
+  animation: fadeInDown 0.75s ease-in-out 7s forwards;
 }
