--- a/2019/2019-03/2019-03-22/source/320x50.css
+++ b/2019/2019-03/2019-03-22/source/320x50.css
@@ -778,7 +778,7 @@
   }
   100% { 
     visibility: visible;
-    -webkit-transform: scale(0.65, 0.65);
+    -webkit-transform: scale(0.47, 0.47);
   }
 }
 @-moz-keyframes imageZoomOut {
@@ -788,7 +788,7 @@
   }
   100% { 
     visibility: visible;
-    -moz-transform: scale(0.65, 0.65);
+    -moz-transform: scale(0.47, 0.47); 
   }
 }
 @keyframes imageZoomOut {
@@ -798,7 +798,7 @@
   }
   100% { 
     visibility: visible;
-    transform: scale(0.65, 0.65);
+    transform: scale(0.47, 0.47);
   }
 }
 
@@ -818,8 +818,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 250px;
+  width: 320px;
+  height: 50px;
   display: block;
 }
 
@@ -859,98 +859,62 @@
 }
 
 .bg {
-  background: url('./images/300x250_d_bg.png');
+  background: url('./images/320x50_bg.png');
 }
-.cta {
-  background: url('./images/300x250_d_cta.png');
+.logo {
+  background: url('./images/320x50_logo.png');
 }
+
 
 .content-wrapper.animation .bg{
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.content-wrapper.animation .cta{
+.content-wrapper.animation .logo{
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 
 
-.logo {
-  background: url('./images/300x250_d_logo.png');
-}
-.image {
-  top: -58px;
-  left: -120px;
-  width: 575px;
-  height: 385px;
-
-  -webkit-transform-origin: 270px 166px;
-  -moz-transform-origin: 270px 166px;
-  transform-origin: 270px 166px;
-}
-.frame1-image {
-  background: url('./images/300x250_d_image.jpg') no-repeat center center;
-}
-.image-mask {
-  background: url('./images/300x250_d_mask.jpg') no-repeat center center;
+.cta {
+  background: url('./images/320x50_cta.png');
 }
 .frame1-text {
-  background: url('./images/300x250_d_frame1_text.png') no-repeat center center;
+  background: url('./images/320x50_text1.png') no-repeat center center;
 }
 .frame2-text {
-  background: url('./images/300x250_d_frame2_text.png') no-repeat center center;
+  background: url('./images/320x50_text2.png') no-repeat center center;
 }
 .frame3-text {
-  background: url('./images/300x250_d_frame3_text.png') no-repeat center center;
+  background: url('./images/320x50_text3.png') no-repeat center center;
 }
 
-.frame.animation .logo {
-  -webkit-animation: fadeIn 0.75s ease-in-out 0s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0s forwards;
-  animation: fadeIn 0.75s ease-in-out 0s forwards;
+.frame.animation .frame1-text, .frame.animation .frame2-text {
+  -webkit-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
+  animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
 }
-
-.frame.animation .frame1-image-container {
-  -webkit-animation: fadeIn 0.25s ease-in-out 0.25s forwards;
-  -moz-animation: fadeIn 0.25s ease-in-out 0.25s forwards;
-  animation: fadeIn 0.25s ease-in-out 0.25s forwards;
-}
-.frame.animation .frame1-image {
-  -webkit-animation: imageZoomOut 2s ease-in-out 0.5s forwards;
-  -moz-animation: imageZoomOut 2s ease-in-out 0.5s forwards;
-  animation: imageZoomOut 2s ease-in-out 0.5s forwards;
-}
-.frame.animation .frame1-image-mask-container {
-  -webkit-animation: fadeIn 0.75s ease-in-out 2.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 2.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 2.75s forwards;
-}
-.frame.animation .image-mask {
-  -webkit-animation: imageZoomOut 10ms ease-in-out 2.75s forwards;
-  -moz-animation: imageZoomOut 10ms ease-in-out 2.75s forwards;
-  animation: imageZoomOut 10ms ease-in-out 2.75s forwards;
-}
-.frame.animation .frame1-text {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 3.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 3.5s forwards;
-}
-.frame1.animation {
-  -webkit-animation: fadeOut 0.75s ease-in-out 5.75s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 5.75s forwards;
-  animation: fadeOut 0.75s ease-in-out 5.75s forwards;
-}
-
-.frame.animation .frame2-text, .frame.animation .frame3-text {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
-}
-.frame2.animation, .frame3.animation {
+.frame1.animation, .frame2.animation {
   -webkit-animation: fadeOut 0.75s ease-in-out 2.75s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 2.75s forwards;
   animation: fadeOut 0.75s ease-in-out 2.75s forwards;
+}
+
+.frame.animation .frame3-text {
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+.frame.animation .cta {
+  -webkit-animation: fadeInLeft 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeInLeft 0.75s ease-in-out 0.75s forwards;
+  animation: fadeInLeft 0.75s ease-in-out 0.75s forwards;
+}
+.frame3.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3s forwards;
+  animation: fadeOut 0.75s ease-in-out 3s forwards;
 }
 
